hphp/test/slow/late-init-soft/redeclare1.php.expectf
Fatal error: Property B::$x must be <<__SoftLateInit>> (as in class A) in %s/redeclare1.php on line 8
